// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Card Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah sc-dlVyqM cisfns jiwipY sc-cTApHj OuQI sc-jObXwK daJbGE"
      >
        <div
          class="sc-gKckTs jhmBNr sc-iCfLBT cEOlPK"
        >
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT OEWPY"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card Small 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah sc-dlVyqM cisfns jiwipY sc-cTApHj iHyFVj sc-jObXwK daJbGE"
      >
        <div
          class="sc-gKckTs jhmBNr sc-iCfLBT cEOlPK"
        >
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT OEWPY"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card With Header 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah sc-dlVyqM cisfns jiwipY sc-cTApHj OuQI sc-jObXwK daJbGE"
      >
        <div
          class="sc-gKckTs jhmBNr sc-iCfLBT cEOlPK"
        >
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah kfDFoA"
          >
            <h5
              class="sc-gWXaA-D iitkgk sc-iAKVOt flZRRl"
            >
              Card with Button
            </h5>
            <button
              class="StyledButton-sc-323bzc-0 bTZyVl sc-bqiQRQ sc-bkkfTU dZBHzy jcglJa sc-dJjZJu bJNpNW"
              type="button"
            >
              Update
            </button>
          </div>
          <hr
            class="sc-ikJzcn blqzkB sc-hiCivh iDGhYe"
          />
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT OEWPY"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card With Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kueJNo sc-eFehXo gnniYV"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah sc-dlVyqM cisfns jiwipY sc-cTApHj OuQI sc-jObXwK daJbGE"
      >
        <div
          class="sc-gKckTs jhmBNr sc-iCfLBT cEOlPK"
        >
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah kfDFoA"
          >
            <h5
              class="sc-gWXaA-D iitkgk sc-iAKVOt flZRRl"
            >
              Card with Button
            </h5>
            <a
              class="sc-eGRTUG hyiPSP sc-ctqRej UpykM"
              color="primary.main"
              href="https://balena.io"
            >
              Link
            </a>
          </div>
          <hr
            class="sc-ikJzcn blqzkB sc-hiCivh iDGhYe"
          />
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT ga-DGEu"
          >
            <div>
              Lorem Ipsum dolor si amet
            </div>
          </div>
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT ga-DGEu"
          >
            <hr
              class="sc-ikJzcn blqzkB sc-hiCivh cMgYW"
            />
            <a
              class="sc-eGRTUG hyiPSP sc-ctqRej UpykM"
              color="primary.main"
              href="www.balena.io"
            >
              Link
            </a>
          </div>
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT ga-DGEu"
          >
            <hr
              class="sc-ikJzcn blqzkB sc-hiCivh cMgYW"
            />
            <span
              class="sc-fKVsgm hjxFYR sc-iwjezw cUnsQP sc-cHzrye erguoE text-with-copy"
              title="This value has been copied to your clipboard!"
            >
              <span
                class="text-with-copy__content"
              >
                Row with Copy component
              </span>
              <span
                class="text-with-copy__copy_wrapper"
              >
                <div
                  class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl text-with-copy__copy"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-copy fa-w-14 "
                    data-icon="copy"
                    data-prefix="far"
                    focusable="false"
                    role="img"
                    viewBox="0 0 448 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M433.941 65.941l-51.882-51.882A48 48 0 0 0 348.118 0H176c-26.51 0-48 21.49-48 48v48H48c-26.51 0-48 21.49-48 48v320c0 26.51 21.49 48 48 48h224c26.51 0 48-21.49 48-48v-48h80c26.51 0 48-21.49 48-48V99.882a48 48 0 0 0-14.059-33.941zM266 464H54a6 6 0 0 1-6-6V150a6 6 0 0 1 6-6h74v224c0 26.51 21.49 48 48 48h96v42a6 6 0 0 1-6 6zm128-96H182a6 6 0 0 1-6-6V54a6 6 0 0 1 6-6h106v88c0 13.255 10.745 24 24 24h88v202a6 6 0 0 1-6 6zm6-256h-64V48h9.632c1.591 0 3.117.632 4.243 1.757l48.368 48.368a6 6 0 0 1 1.757 4.243V112z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </span>
            </span>
          </div>
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT ga-DGEu"
          >
            <hr
              class="sc-ikJzcn blqzkB sc-hiCivh cMgYW"
            />
            <div
              class="sc-gKckTs jhmBNr sc-iCfLBT gEsLGl sc-hGPAah glQHfA"
            >
              <div>
                Row with
              </div>
              <div>
                Flex
              </div>
            </div>
          </div>
          <div
            class="sc-gKckTs jhmBNr sc-iCfLBT ga-DGEu"
          >
            <hr
              class="sc-ikJzcn blqzkB sc-hiCivh cMgYW"
            />
            <div>
              Lorem Ipsum dolor si amet
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
